[BUILD][CMAKE] Add some MZs.Excepts MZ2500 due to linking.

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -24,6 +24,7 @@ include(config)
 include(config_emufm7)
 include(config_fmtowns)
 
+include(config_mz80_700)
 include(config_pc6001)
 include(config_pc8801)
 include(config_x1)
