--- a/source/src/qt/machines/mz3500/CMakeLists.txt
+++ b/source/src/qt/machines/mz3500/CMakeLists.txt
@@ -1,17 +1,13 @@
-message("* qt/mz3500")
+message("* qt/${EXE_NAME}")
 
 set(s_qt_mz3500_headers
 	  menuclasses.h
 )
 
-if(USE_QT_5)
-  QT5_WRAP_CPP(s_qt_mz3500_headers_MOC ${s_qt_mz3500_headers})
-else()
-  QT4_WRAP_CPP(s_qt_mz3500_headers_MOC ${s_qt_mz3500_headers})
-endif()
-add_library(qt_mz3500
+QT5_WRAP_CPP(s_qt_${EXE_NAME}_headers_MOC ${s_qt_mz3500_headers})
+add_library(qt_${EXE_NAME}
 	  MainWindow.cpp
-	  ${s_qt_mz3500_headers_MOC}
+	  ${s_qt_${EXE_NAME}_headers_MOC}
 )
 
 
