--- a/source/src/qt/machines/mz700/CMakeLists.txt
+++ b/source/src/qt/machines/mz700/CMakeLists.txt
@@ -1,17 +1,14 @@
-message("* qt/mz700")
+message("* qt/${EXE_NAME}")
 
 set(s_qt_mz700_headers
 	  menuclasses.h
 )
-if(USE_QT_5)
-  QT5_WRAP_CPP(s_qt_mz700_headers_MOC ${s_qt_mz700_headers})
-else()
-  QT4_WRAP_CPP(s_qt_mz700_headers_MOC ${s_qt_mz700_headers})
-endif()
 
-add_library(qt_mz700
+QT5_WRAP_CPP(s_qt_${EXE_NAME}_headers_MOC ${s_qt_mz700_headers})
+
+add_library(qt_${EXE_NAME}
 	  MainWindow.cpp
-	  ${s_qt_mz700_headers_MOC}
+	  ${s_qt_${EXE_NAME}_headers_MOC}
 )
 
 
