--- a/source/src/qt/machines/mz80k/CMakeLists.txt
+++ b/source/src/qt/machines/mz80k/CMakeLists.txt
@@ -3,14 +3,11 @@ message("* qt/mz80k")
 set(s_qt_mz80_headers
 	  menuclasses.h
 )
-if(USE_QT_5)
-  QT5_WRAP_CPP(s_qt_mz80_headers_MOC ${s_qt_mz80_headers})
-else()
-  QT4_WRAP_CPP(s_qt_mz80_headers_MOC ${s_qt_mz80_headers})
-endif()
-add_library(qt_mz80k
+
+QT5_WRAP_CPP(s_qt_${EXE_NAME}_headers_MOC ${s_qt_mz80_headers})
+add_library(qt_${EXE_NAME}
 	  MainWindow.cpp
-	  ${s_qt_mz80_headers_MOC}
+	  ${s_qt_${EXE_NAME}_headers_MOC}
 )
 
 
