--- a/source/src/qt/machines/n5200/CMakeLists.txt
+++ b/source/src/qt/machines/n5200/CMakeLists.txt
@@ -1,17 +1,12 @@
-message("* qt/n5200")
+message("* qt/${EXE_NAME}")
 
 set(s_qt_n5200_headers
 	  menuclasses.h
 )
-
-if(USE_QT_5)
-  QT5_WRAP_CPP(s_qt_n5200_headers_MOC ${s_qt_n5200_headers})
-else()
-  QT4_WRAP_CPP(s_qt_n5200_headers_MOC ${s_qt_n5200_headers})
-endif()
-add_library(qt_n5200
+QT5_WRAP_CPP(s_qt_${EXE_NAME}_headers_MOC ${s_qt_n5200_headers})
+add_library(qt_${EXE_NAME}
 	  MainWindow.cpp
-	  ${s_qt_n5200_headers_MOC}
+	  ${s_qt_${EXE_NAME}_headers_MOC}
 )
 
 
