--- a/source/src/vm/mz80k/CMakeLists.txt
+++ b/source/src/vm/mz80k/CMakeLists.txt
@@ -1,32 +1,47 @@
 cmake_minimum_required (VERSION 2.6)
 
-message("* vm/mz80K")
+message("* vm/${EXE_NAME}")
 
-if(BUILD_MZ80AIF)
+string(TOUPPER "${EXE_NAME}" U_EXE_NAME)
 
-add_library(vm_mz80k
-	memory.cpp
-	keyboard.cpp
-	mz80aif.cpp
-	mz80k.cpp
-	printer.cpp
+if("${U_EXE_NAME}" STREQUAL "EMUMZ80A")
+add_library(vm_${EXE_NAME}
+	../mz1p17.cpp
+
+	./memory.cpp
+	./keyboard.cpp
+	./mz80aif.cpp
+	./printer.cpp
+	./mz80k.cpp
 )
 
-elseif(BUILD_MZ80FIO)
-add_library(vm_mz80k
-	memory.cpp
-	keyboard.cpp
-	mz80fio.cpp
-	mz80k.cpp
-	printer.cpp
-)
+elseif("${U_EXE_NAME}" STREQUAL "EMUMZ80K")
+add_library(vm_${EXE_NAME}
+	../mz1p17.cpp
 
+	./memory.cpp
+	./keyboard.cpp
+	./mz80fio.cpp
+	./printer.cpp
+	./mz80k.cpp
+)
+elseif("${U_EXE_NAME}" STREQUAL "EMUMZ1200")
+add_library(vm_${EXE_NAME}
+	../mz1p17.cpp
+	./memory.cpp
+	./keyboard.cpp
+	./mz80fio.cpp
+	./printer.cpp
+	./mz80k.cpp
+)
 else()
-
-add_library(vm_mz80k
-	memory.cpp
-	keyboard.cpp
-	mz80k.cpp
-	printer.cpp
+## IS Exists?
+add_library(vm_${EXE_NAME}
+	../mz1p17.cpp
+	
+	./memory.cpp
+	./keyboard.cpp
+	./printer.cpp
+	./mz80k.cpp
 )
 endif()
