[UI][Qt][MZ2800] Fix crash on start.

--- a/source/src/vm/mz2800/CMakeLists.txt
+++ b/source/src/vm/mz2800/CMakeLists.txt
@@ -3,19 +3,24 @@ cmake_minimum_required (VERSION 2.6)
 message("* vm/mz2800")
 
 set(BASIC_VM_FILES 
-           mz2800.cpp
-	   crtc.cpp
-	   floppy.cpp
-	   joystick.cpp
-	   keyboard.cpp
-	   memory.cpp
-	   mouse.cpp
-	   reset.cpp
-	   sasi.cpp
-	   serial.cpp
-	   sysport.cpp
-	   printer.cpp
-	   )
+
+	../mz1p17.cpp
+	../scsi_host.cpp
+	
+	crtc.cpp
+	floppy.cpp
+	joystick.cpp
+	keyboard.cpp
+	./memory.cpp
+	mouse.cpp
+	reset.cpp
+	sasi.cpp
+	serial.cpp
+	sysport.cpp
+	printer.cpp
+	
+	mz2800.cpp
+)
 	   
 
-add_library(vm_mz2800  ${BASIC_VM_FILES})
+add_library(vm_emumz2800  ${BASIC_VM_FILES})
