--- a/source/src/vm/mz3500/CMakeLists.txt
+++ b/source/src/vm/mz3500/CMakeLists.txt
@@ -1,14 +1,14 @@
 cmake_minimum_required (VERSION 2.6)
 
-message("* vm/mz3500")
+message("* vm/emumz3500")
 
 set(BASIC_VM_FILES 
-           mz3500.cpp
-
-	   keyboard.cpp
-	   main.cpp
-	   sub.cpp
-	   )
+	keyboard.cpp
+	main.cpp
+	sub.cpp
+	
+    mz3500.cpp
+)
 	   
 
 add_library(vm_mz3500  ${BASIC_VM_FILES})
