[BUILD][CMAKE] Add CASIO's machines (FP-1100, FP-200, PV-1000 and PV-2000).

--- a/source/src/vm/fp1100/CMakeLists.txt
+++ b/source/src/vm/fp1100/CMakeLists.txt
@@ -1,8 +1,10 @@
 cmake_minimum_required (VERSION 2.6)
 
-message("* vm/fp1100")
+message("* vm/emufp1100")
 
-add_library(vm_fp1100
+add_library(vm_emufp1100
+	../upd7801.cpp
+	
 	fdcpack.cpp
 	fp1100.cpp
 	main.cpp
