--- a/source/src/vm/fp200/CMakeLists.txt
+++ b/source/src/vm/fp200/CMakeLists.txt
@@ -1,8 +1,10 @@
 cmake_minimum_required (VERSION 2.6)
 
-message("* vm/fp200")
+message("* vm/emufp200")
 
-add_library(vm_fp200
+add_library(vm_emufp200
+	../i8080.cpp
+	
 	io.cpp
 	fp200.cpp
 )
