--- a/source/src/vm/pv2000/CMakeLists.txt
+++ b/source/src/vm/pv2000/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required (VERSION 2.6)
 
-message("* vm/pv2000")
+message("* vm/${EXE_NAME}")
 
 set(VM_PV2000_LIB_SRCS
 	pv2000.cpp
@@ -11,6 +11,6 @@ set(VM_PV2000_LIB_SRCS
 )
 
 
-add_library(vm_pv2000
+add_library(vm_${EXE_NAME}
 	${VM_PV2000_LIB_SRCS}
 )
