--- a/source/src/qt/machines/fp200/CMakeLists.txt
+++ b/source/src/qt/machines/fp200/CMakeLists.txt
@@ -3,15 +3,12 @@ message("* qt/fp200")
 set(s_qt_fp200_headers
 	  menuclasses.h
 	  )
-if(USE_QT_5)
-  QT5_WRAP_CPP(s_qt_fp200_headers_MOC ${s_qt_fp200_headers})
-else()
-  QT4_WRAP_CPP(s_qt_fp200_headers_MOC ${s_qt_fp200_headers})
-endif()
 
-add_library(qt_fp200
+QT5_WRAP_CPP(s_qt_emufp200_headers_MOC ${s_qt_fp200_headers})
+
+add_library(qt_emufp200
 	  MainWindow.cpp
-	  ${s_qt_fp200_headers_MOC}
+	  ${s_qt_emufp200_headers_MOC}
 )
 
 
