--- a/source/src/qt/machines/pv2000/CMakeLists.txt
+++ b/source/src/qt/machines/pv2000/CMakeLists.txt
@@ -1,18 +1,14 @@
-message("* qt/pv2000")
+message("* qt/emupv2000")
 
-set(s_qt_pv2000_headers
+set(s_qt_emupv2000_headers
 	  menuclasses.h
 )
 
-if(USE_QT_5)
-  QT5_WRAP_CPP(s_qt_pv2000_headers_MOC ${s_qt_pv2000_headers})
-else()
-  QT4_WRAP_CPP(s_qt_pv2000_headers_MOC ${s_qt_pv2000_headers})
-endif()
+QT5_WRAP_CPP(s_qt_emupv2000_headers_MOC ${s_qt_emupv2000_headers})
 
-add_library(qt_pv2000
+add_library(qt_emupv2000
 	  MainWindow.cpp
-	  ${s_qt_pv2000_headers_MOC}
+	  ${s_qt_emupv2000_headers_MOC}
 )
 
 
