--- a/source/src/qt/machines/msx/CMakeLists.txt
+++ b/source/src/qt/machines/msx/CMakeLists.txt
@@ -1,17 +1,14 @@
-message("* qt/msx1")
+message("* qt/${EXE_NAME}")
 
-set(s_qt_msx1_headers
+set(s_qt_msx_headers
 	  menuclasses.h
 )
-if(USE_QT_5)
-  QT5_WRAP_CPP(s_qt_msx1_headers_MOC ${s_qt_msx1_headers})
-else()
-  QT4_WRAP_CPP(s_qt_msx1_headers_MOC ${s_qt_msx1_headers})
-endif()
 
-add_library(qt_msx
+QT5_WRAP_CPP(s_qt_${EXE_NAME}_headers_MOC ${s_qt_msx_headers})
+
+add_library(qt_${EXE_NAME}
 	  MainWindow.cpp
-	  ${s_qt_msx1_headers_MOC}
+	  ${s_qt_${EXE_NAME}_headers_MOC}
 )
 
 
