[BUILD][CMAKE] Add FM16β and FM16π.

--- a/source/src/qt/machines/fm16pi/CMakeLists.txt
+++ b/source/src/qt/machines/fm16pi/CMakeLists.txt
@@ -1,18 +1,14 @@
-message("* qt/fm16pi")
+message("* qt/${EXE_NAME}")
 
 set(s_qt_fm16pi_headers
 	  menuclasses.h
 )
 
-if(USE_QT_5)
-  QT5_WRAP_CPP(s_qt_fm16pi_headers_MOC ${s_qt_fm16pi_headers})
-else()
-  QT4_WRAP_CPP(s_qt_fm16pi_headers_MOC ${s_qt_fm16pi_headers})
-endif()
+QT5_WRAP_CPP(s_qt_${EXE_NAME}_headers_MOC ${s_qt_fm16pi_headers})
 
-add_library(qt_fm16pi
+add_library(qt_${EXE_NAME}
 	  MainWindow.cpp
-	  ${s_qt_fm16pi_headers_MOC}
+	  ${s_qt_${EXE_NAME}_headers_MOC}
 )
 
 
