--- a/source/src/vm/fm16beta/CMakeLists.txt
+++ b/source/src/vm/fm16beta/CMakeLists.txt
@@ -1,34 +1,27 @@
 cmake_minimum_required (VERSION 2.6)
 
-message("* vm/fm16beta")
+message("* vm/${EXE_NAME}")
 
 set(VM_FM16BETA_LIB_SRCS
+	../i8237.cpp
+	../msm58321.cpp
+	
      cmos.cpp
      keyboard.cpp
      mainbus.cpp
      sub.cpp
+	 
      fm16beta.cpp
 )
 
-if(USE_DEVICES_SHARED_LIB)
-else()
-	set(VM_FM16BETA_LIB_SRCS ${VM_FM16BETA_LIB_SRCS} 
-	                         hd46505.cpp
-	                         i8237.cpp
-				 i8251.cpp
-				 i8259.cpp
-				 mb8877.cpp
-				 mc6809.cpp
-				 mc6840.cpp
-				 msm58321.cpp
-				 pcm1bit.cpp
-				 
-				 disk.cpp
-				 
-				 memory.cpp
-				 io.cpp
-				 )
-endif()
-add_library(vm_fm16beta
+add_library(vm_${EXE_NAME}
 	${VM_FM16BETA_LIB_SRCS}
 )
+
+string(TOUPPER "${EXE_NAME}" U_EXE_NAME)
+
+if("${U_EXE_NAME}" STREQUAL "EMUFM16BETA_186")
+	target_compile_definitions(vm_emufm16beta_186 PRIVATE -DHAS_I186)
+elseif("${U_EXE_NAME}" STREQUAL "EMUFM16BETA_286")
+	target_compile_definitions(vm_emufm16beta_286 PRIVATE -DHAS_I286)
+endif()
