--- a/source/src/vm/fm16pi/CMakeLists.txt
+++ b/source/src/vm/fm16pi/CMakeLists.txt
@@ -1,11 +1,12 @@
 cmake_minimum_required (VERSION 2.6)
 
-message("* vm/pc16pi")
+message("* vm/emufm16pi")
 
-set(BASIC_VM_FILES 
-       fm16pi.cpp
-	   sub.cpp
-	   )
-	   
+set(BASIC_VM_FILES
+	../msm58321.cpp
+	
+	sub.cpp
+	fm16pi.cpp
+)
 
-add_library(vm_fm16pi  ${BASIC_VM_FILES})
+add_library(vm_emufm16pi  ${BASIC_VM_FILES})
