[BUILD][CMAKE] Add MZ-2800, 3500 , 5500, 6500 and 6550.

--- a/source/src/vm/mz3500/CMakeLists.txt
+++ b/source/src/vm/mz3500/CMakeLists.txt
@@ -1,8 +1,10 @@
 cmake_minimum_required (VERSION 2.6)
 
-message("* vm/emumz3500")
+message("* vm/${EXE_NAME}")
 
-set(BASIC_VM_FILES 
+set(BASIC_VM_FILES
+	../mz1p17.cpp
+	
 	keyboard.cpp
 	main.cpp
 	sub.cpp
@@ -10,5 +12,4 @@ set(BASIC_VM_FILES
     mz3500.cpp
 )
 	   
-
-add_library(vm_mz3500  ${BASIC_VM_FILES})
+add_library(vm_${EXE_NAME}  ${BASIC_VM_FILES})
