[BUILD][CMAKE] Add FM R series.

--- a/source/src/qt/machines/fmr50/CMakeLists.txt
+++ b/source/src/qt/machines/fmr50/CMakeLists.txt
@@ -1,18 +1,16 @@
-message("* qt/fmr50")
+message("* qt/${EXE_NAME}")
 
 set(s_qt_fmr50_headers
 	  menuclasses.h
 )
 
-if(USE_QT_5)
-  QT5_WRAP_CPP(s_qt_fmr50_headers_MOC ${s_qt_fmr50_headers})
-else()
-  QT4_WRAP_CPP(s_qt_fmr50_headers_MOC ${s_qt_fmr50_headers})
-endif()
+QT5_WRAP_CPP(s_qt_${EXE_NAME}_headers_MOC ${s_qt_fmr50_headers})
 
-add_library(qt_fmr50
+add_library(qt_${EXE_NAME}
 	  MainWindow.cpp
-	  ${s_qt_fmr50_headers_MOC}
+	  ${s_qt_${EXE_NAME}_headers_MOC}
 )
+
+
 
 
