--- a/source/src/qt/machines/fmr30/CMakeLists.txt
+++ b/source/src/qt/machines/fmr30/CMakeLists.txt
@@ -1,18 +1,12 @@
-message("* qt/fmr30")
+message("* qt/${EXE_NAME}")
 
 set(s_qt_fmr30_headers
 	  menuclasses.h
 )
 
-if(USE_QT_5)
-  QT5_WRAP_CPP(s_qt_fmr30_headers_MOC ${s_qt_fmr30_headers})
-else()
-  QT4_WRAP_CPP(s_qt_fmr30_headers_MOC ${s_qt_fmr30_headers})
-endif()
+QT5_WRAP_CPP(s_qt_${EXE_NAME}_headers_MOC ${s_qt_fmr30_headers})
 
-add_library(qt_fmr30
+add_library(qt_${EXE_NAME}
 	  MainWindow.cpp
-	  ${s_qt_fmr30_headers_MOC}
+	  ${s_qt_${EXE_NAME}_headers_MOC}
 )
-
-
