--- a/source/src/qt/machines/pc8201/CMakeLists.txt
+++ b/source/src/qt/machines/pc8201/CMakeLists.txt
@@ -1,18 +1,14 @@
-message("* qt/pc8201")
+message("* qt/${EXE_NAME}")
 
 set(s_qt_pc8201_headers
 	  menuclasses.h
 )
 
-if(USE_QT_5)
-  QT5_WRAP_CPP(s_qt_pc8201_headers_MOC ${s_qt_pc8201_headers})
-else()
-  QT4_WRAP_CPP(s_qt_pc8201_headers_MOC ${s_qt_pc8201_headers})
-endif()
+QT5_WRAP_CPP(s_qt_${EXE_NAME}_headers_MOC ${s_qt_pc8201_headers})
 
-add_library(qt_pc8201
+add_library(qt_${EXE_NAME}
 	  MainWindow.cpp
-	  ${s_qt_pc8201_headers_MOC}
+	  ${s_qt_${EXE_NAME}_headers_MOC}
 )
 
 
