--- a/source/src/qt/machines/smc777/CMakeLists.txt
+++ b/source/src/qt/machines/smc777/CMakeLists.txt
@@ -1,17 +1,13 @@
-message("* qt/smc777")
+message("* qt/${EXE_NAME}")
 
 set(s_qt_smc777_headers
 	  menuclasses.h
 )
-if(USE_QT_5)
-  QT5_WRAP_CPP(s_qt_smc777_headers_MOC ${s_qt_smc777_headers})
-else()
-  QT4_WRAP_CPP(s_qt_smc777_headers_MOC ${s_qt_smc777_headers})
-endif()
+QT5_WRAP_CPP(s_qt_${EXE_NAME}_headers_MOC ${s_qt_smc777_headers})
 
-add_library(qt_smc777
+add_library(qt_${EXE_NAME}
 	  MainWindow.cpp
-	  ${s_qt_smc777_headers_MOC}
+	  ${s_qt_${EXE_NAME}_headers_MOC}
 )
 
 
