--- a/source/src/qt/machines/yis/CMakeLists.txt
+++ b/source/src/qt/machines/yis/CMakeLists.txt
@@ -1,14 +1,14 @@
-message("* qt/yis")
+message("* qt/emuyis")
 
 set(s_qt_yis_headers
 	  menuclasses.h
 )
 
-QT5_WRAP_CPP(s_qt_yis_headers_MOC ${s_qt_yis_headers})
+QT5_WRAP_CPP(s_qt_emuyis_headers_MOC ${s_qt_yis_headers})
 
 add_library(qt_emuyis
 	  MainWindow.cpp
-	  ${s_qt_yis_headers_MOC}
+	  ${s_qt_emuyis_headers_MOC}
 )
 
 
