--- a/source/src/vm/colecovision/CMakeLists.txt
+++ b/source/src/vm/colecovision/CMakeLists.txt
@@ -1,10 +1,10 @@
 cmake_minimum_required (VERSION 2.6)
 
-message("* vm/colecovision")
+message("* vm/emucolecovision")
 
-add_library(vm_colecovision
-	colecovision.cpp
-	
-	memory.cpp
+add_library(vm_emucolecovision
+	./memory.cpp
 	keyboard.cpp
+
+	colecovision.cpp
 )
