--- a/source/src/vm/familybasic/CMakeLists.txt
+++ b/source/src/vm/familybasic/CMakeLists.txt
@@ -1,10 +1,12 @@
 cmake_minimum_required (VERSION 2.6)
 
-message("* vm/familybasic")
+message("* vm/${EXE_NAME}")
 
-add_library(vm_familybasic
-	familybasic.cpp
-	memory.cpp
+add_library(vm_${EXE_NAME}
+	../n2a03.cpp
+	
 	apu.cpp
+	memory.cpp
 	ppu.cpp
+	familybasic.cpp
 )
