--- a/source/src/vm/jr800/CMakeLists.txt
+++ b/source/src/vm/jr800/CMakeLists.txt
@@ -1,8 +1,9 @@
 cmake_minimum_required (VERSION 2.6)
 
-message("* vm/jr800")
+message("* vm/emujr800")
 
-add_library(vm_jr800
-	io.cpp
+add_library(vm_emujr800
+
+	./io.cpp
 	jr800.cpp
 )
