--- a/source/src/vm/m5/CMakeLists.txt
+++ b/source/src/vm/m5/CMakeLists.txt
@@ -1,9 +1,10 @@
 cmake_minimum_required (VERSION 2.6)
 
-message("* vm/m5")
+message("* vm/emum5")
 
-add_library(vm_m5
-	m5.cpp
+add_library(vm_emum5
+
 	cmt.cpp
 	keyboard.cpp
+	m5.cpp
 )
