--- a/source/src/vm/multi8/CMakeLists.txt
+++ b/source/src/vm/multi8/CMakeLists.txt
@@ -1,13 +1,15 @@
 cmake_minimum_required (VERSION 2.6)
 
-message("* vm/multi8")
+message("* vm/emumulti8")
 
-add_library(vm_multi8
-	multi8.cpp
+add_library(vm_emumulti8
+
 	cmt.cpp
 	display.cpp
 	floppy.cpp
 	kanji.cpp
 	keyboard.cpp
-	memory.cpp
-	)
+	./memory.cpp
+	
+	multi8.cpp
+)
