--- a/source/src/vm/mycomz80a/CMakeLists.txt
+++ b/source/src/vm/mycomz80a/CMakeLists.txt
@@ -1,16 +1,18 @@
 cmake_minimum_required (VERSION 2.6)
 
-message("* vm/mycomz80a")
+message("* vm/emumycomz80a")
 
 set(VM_MYCOMZ80A_LIB_SRCS
+	../msm5832.cpp
+	
 	display.cpp
 	keyboard.cpp
-	memory.cpp
+	./memory.cpp
 
 	mycomz80a.cpp
 )
 
 
-add_library(vm_mycomz80a
+add_library(vm_emumycomz80a
 	${VM_MYCOMZ80A_LIB_SRCS}
 )
