--- a/source/src/vm/n5200/CMakeLists.txt
+++ b/source/src/vm/n5200/CMakeLists.txt
@@ -1,17 +1,19 @@
 cmake_minimum_required (VERSION 2.6)
 
-message("* vm/n5200")
+message("* vm/emun5200")
 
 set(VM_N5200_LIB_SRCS
-	n5200.cpp
+	../i8237.cpp
 	
 	display.cpp
 	floppy.cpp
 	keyboard.cpp
 	memory.cpp
 	system.cpp
+	
+	n5200.cpp
 )
 
-add_library(vm_n5200
+add_library(vm_emun5200
 	${VM_N5200_LIB_SRCS}
 )
