--- a/source/src/vm/pc2001/CMakeLists.txt
+++ b/source/src/vm/pc2001/CMakeLists.txt
@@ -1,6 +1,10 @@
+message("* vm/${EXE_NAME}")
+
 cmake_minimum_required (VERSION 2.6)
 
-add_library(vm_pc2001
-	io.cpp
+add_library(vm_emupc2001
+	../upd7907.cpp
+	
+	./io.cpp
 	pc2001.cpp
 )
