--- a/source/src/vm/pc8201/CMakeLists.txt
+++ b/source/src/vm/pc8201/CMakeLists.txt
@@ -1,11 +1,13 @@
 cmake_minimum_required (VERSION 2.6)
 
-message("* vm/pc8201")
+message("* vm/${EXE_NAME}")
 
-add_library(vm_pc8201
-  pc8201.cpp
-  cmt.cpp
-  keyboard.cpp
-  lcd.cpp
-  memory.cpp
+add_library(vm_${EXE_NAME}
+	../i8080.cpp
+
+	cmt.cpp
+	keyboard.cpp
+	lcd.cpp
+	./memory.cpp
+	pc8201.cpp
 )
