--- a/source/src/vm/pc8801/CMakeLists.txt
+++ b/source/src/vm/pc8801/CMakeLists.txt
@@ -2,7 +2,9 @@ cmake_minimum_required (VERSION 2.6)
 
 message("* vm/${EXE_NAME}")
 
-if(${EXE_NAME} STREQUAL emupc8801ma)
+string(TOUPPER "${EXE_NAME}" U_EXE_NAME)
+
+if("${U_EXE_NAME}" STREQUAL "EMUPC8801MA")
 	add_library(vm_emupc8801ma
 		../scsi_host.cpp
 		pc88.cpp
@@ -15,14 +17,3 @@ else()
 	)
 endif()
 
-#if(BUILD_PC98DO)
-#add_library(vm_pc8801
-#	pc88.cpp
-##	pc8801.cpp
-#)
-#else()
-#add_library(vm_pc8801
-#	pc88.cpp
-#	pc8801.cpp
-#)
-#endif()
