--- a/source/src/vm/phc20/CMakeLists.txt
+++ b/source/src/vm/phc20/CMakeLists.txt
@@ -1,13 +1,15 @@
 cmake_minimum_required (VERSION 2.6)
 
-message("* vm/phc20")
+message("* vm/${EXE_NAME}")
 
 set(VM_PHC20_LIB_SRCS
+	../mc6847.cpp
+	
+	./memory.cpp
 	phc20.cpp
-	memory.cpp
 )
 
 
-add_library(vm_phc20
+add_library(vm_${EXE_NAME}
 	${VM_PHC20_LIB_SRCS}
 )
