--- a/source/src/vm/pyuta/CMakeLists.txt
+++ b/source/src/vm/pyuta/CMakeLists.txt
@@ -1,8 +1,10 @@
 cmake_minimum_required (VERSION 2.6)
 
-message("* vm/pyuta")
+message("* vm/emupyuta")
 
-  add_library(vm_pyuta
-	memory.cpp
+add_library(vm_emupyuta
+	../tms9995.cpp
+	./memory.cpp
+	
 	pyuta.cpp
-  )
+)
