--- a/source/src/vm/rx78/CMakeLists.txt
+++ b/source/src/vm/rx78/CMakeLists.txt
@@ -1,12 +1,14 @@
 cmake_minimum_required (VERSION 2.6)
 
-message("* vm/rx78")
+message("* vm/emurx78")
 
-add_library(vm_rx78
-	rx78.cpp
+add_library(vm_emurx78
+
 	cmt.cpp
 	keyboard.cpp
 	memory.cpp
 	printer.cpp
 	vdp.cpp
+	
+	rx78.cpp
 )
