--- a/source/src/vm/smc777/CMakeLists.txt
+++ b/source/src/vm/smc777/CMakeLists.txt
@@ -1,8 +1,19 @@
 cmake_minimum_required (VERSION 2.6)
 
-message("* vm/smc777")
+message("* vm/${EXE_NAME}")
 
-add_library(vm_smc777
+string(TOUPPER "${EXE_NAME}" U_EXE_NAME)
+
+if("${U_EXE_NAME}" STREQUAL "EMUSMC70")
+add_library(vm_${EXE_NAME}
+	../msm58321.cpp
+	
+	./memory.cpp
 	smc777.cpp
-	memory.cpp
  )
+elseif("${U_EXE_NAME}" STREQUAL "EMUSMC777")
+add_library(vm_${EXE_NAME}
+	./memory.cpp
+	smc777.cpp
+ )
+endif()
