--- a/source/src/vm/z80tvgame/CMakeLists.txt
+++ b/source/src/vm/z80tvgame/CMakeLists.txt
@@ -1,8 +1,8 @@
 cmake_minimum_required (VERSION 2.6)
 
-message("* vm/z80tvgame")
+message("* vm/${EXE_NAME}")
 
-add_library(vm_z80tvgame
+add_library(vm_${EXE_NAME}
 	z80tvgame.cpp
 	joystick.cpp
 	memory.cpp
