--- a/source/src/qt/machines/colecovision/CMakeLists.txt
+++ b/source/src/qt/machines/colecovision/CMakeLists.txt
@@ -1,16 +1,14 @@
-message("* qt/colecovision")
+message("* qt/${EXE_NAME}")
 
 set(s_qt_colecovision_headers
 	  menuclasses.h
 )
-if(USE_QT_5)
-  QT5_WRAP_CPP(s_qt_colecovision_headers_MOC ${s_qt_colecovision_headers})
-else()
-  QT4_WRAP_CPP(s_qt_colecovision_headers_MOC ${s_qt_colecovision_headers})
-endif()
-add_library(qt_colecovision
+
+QT5_WRAP_CPP(s_qt_${EXE_NAME}_headers_MOC ${s_qt_colecovision_headers})
+
+add_library(qt_${EXE_NAME}
 	  MainWindow.cpp
-	  ${s_qt_colecovision_headers_MOC}
+	  ${s_qt_${EXE_NAME}_headers_MOC}
 )
 
 
