--- a/source/src/qt/machines/jx/CMakeLists.txt
+++ b/source/src/qt/machines/jx/CMakeLists.txt
@@ -1,18 +1,14 @@
-message("* qt/jx")
+message("* qt/${EXE_NAME}")
 
 set(s_qt_jx_headers
 	  menuclasses.h
 )
 
-if(USE_QT_5)
-  QT5_WRAP_CPP(s_qt_jx_headers_MOC ${s_qt_jx_headers})
-else()
-  QT4_WRAP_CPP(s_qt_jx_headers_MOC ${s_qt_jx_headers})
-endif()
+QT5_WRAP_CPP(s_qt_${EXE_NAME}_headers_MOC ${s_qt_jx_headers})
 
-add_library(qt_jx
+add_library(qt_${EXE_NAME}
 	  MainWindow.cpp
-	  ${s_qt_jx_headers_MOC}
+	  ${s_qt_${EXE_NAME}_headers_MOC}
 )
 
 
