--- a/source/src/qt/machines/mycomz80a/CMakeLists.txt
+++ b/source/src/qt/machines/mycomz80a/CMakeLists.txt
@@ -1,17 +1,14 @@
-message("* qt/mycomz80")
+message("* qt/${EXE_NAME}_")
 
 set(s_qt_mycomz80_headers
 	  menuclasses.h
 )
 
-if(USE_QT_5)
-  QT5_WRAP_CPP(s_qt_mycomz80_headers_MOC ${s_qt_mycomz80_headers})
-else()
-  QT4_WRAP_CPP(s_qt_mycomz80_headers_MOC ${s_qt_mycomz80_headers})
-endif()
-add_library(qt_mycomz80a
+QT5_WRAP_CPP(s_qt_${EXE_NAME}_headers_MOC ${s_qt_mycomz80_headers})
+
+add_library(qt_${EXE_NAME}
 	  MainWindow.cpp
-	  ${s_qt_mycomz80_headers_MOC}
+	  ${s_qt_${EXE_NAME}_headers_MOC}
 )
 
 
