--- a/source/src/qt/machines/x07/CMakeLists.txt
+++ b/source/src/qt/machines/x07/CMakeLists.txt
@@ -1,14 +1,14 @@
-message("* qt/x07")
+message("* qt/emux07")
 
 set(s_qt_x07_headers
 	  menuclasses.h
 )
 
-QT5_WRAP_CPP(s_qt_x07_headers_MOC ${s_qt_x07_headers})
+QT5_WRAP_CPP(s_qt_emux07_headers_MOC ${s_qt_x07_headers})
   
 add_library(qt_emux07
 	  MainWindow.cpp
-	  ${s_qt_x07_headers_MOC}
+	  ${s_qt_emux07_headers_MOC}
 )
 
 
