--- a/source/src/vm/bmjr/CMakeLists.txt
+++ b/source/src/vm/bmjr/CMakeLists.txt
@@ -1,8 +1,8 @@
 cmake_minimum_required (VERSION 2.6)
 
-message("* vm/bmjr")
+message("* vm/${EXE_NAME}")
 
-add_library(vm_bmjr
+add_library(vm_${EXE_NAME}
 	bmjr.cpp
 	memory.cpp
 )
