--- a/source/src/vm/bubcom80/CMakeLists.txt
+++ b/source/src/vm/bubcom80/CMakeLists.txt
@@ -1,8 +1,8 @@
 cmake_minimum_required (VERSION 2.6)
 
-message("* vm/bubcom80")
+message("* vm/${EXE_NAME}")
 
-add_library(vm_bubcom80
+add_library(vm_${EXE_NAME}
     bubblecasette.cpp
 	cmt.cpp
 	display.cpp
