--- a/source/src/vm/x07/CMakeLists.txt
+++ b/source/src/vm/x07/CMakeLists.txt
@@ -1,8 +1,8 @@
 cmake_minimum_required (VERSION 2.6)
 
-message("* vm/x07")
+message("* vm/emux07")
 
-add_library(vm_x07
+add_library(vm_emux07
 	x07.cpp
 	io.cpp
 )
