--- a/source/src/vm/yis/CMakeLists.txt
+++ b/source/src/vm/yis/CMakeLists.txt
@@ -1,13 +1,17 @@
 cmake_minimum_required (VERSION 2.6)
 
-message("* vm/yis")
+message("* vm/emuyis")
 
 add_library(vm_emuyis
+	../m6502.cpp
+	../msm58321.cpp
+	
 	calendar.cpp
 	display.cpp
 	floppy.cpp
 	keyboard.cpp
 	mapper.cpp
 	sound.cpp
+	
 	yis.cpp
 )
