--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -16,7 +16,7 @@ project (CSP
 #ToDo
 #set(CMAKE_SYSTEM_PROCESSOR ${ARCHITECTURE} CACHE STRING "Set processor to build.")
 set(USE_DEVICES_SHARED_LIB ON CACHE BOOL "Make devices as one shared library.")
-set(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/build-cmake/cmake/single-build")
+set(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake")
 
 
 include(config)
