--- a/source/src/vm/gamegear/CMakeLists.txt
+++ b/source/src/vm/gamegear/CMakeLists.txt
@@ -1,20 +1,28 @@
 cmake_minimum_required (VERSION 2.6)
 
-message("* vm/fm7")
+message("* vm/${EXE_NAME}")
 
+string(TOUPPER "${EXE_NAME}" U_EXE_NAME)
 
-if(BUILD_GAMEGEAR)
-add_library(vm_gamegear
-	gamegear.cpp
-	keyboard.cpp
-	memory.cpp
-	system.cpp
-)
-else()
-add_library(vm_gamegear
-	mastersystem.cpp
-	keyboard.cpp
-	memory.cpp
-	system.cpp
-)
+if("${U_EXE_NAME}" STREQUAL "EMUGAMEGEAR")
+	add_library(vm_${EXE_NAME}
+		keyboard.cpp
+		./memory.cpp
+		system.cpp
+		gamegear.cpp
+	)
+elseif("${U_EXE_NAME}" STREQUAL "EMUMARK3")
+	add_library(vm_${EXE_NAME}
+		keyboard.cpp
+		./memory.cpp
+		system.cpp
+		mastersystem.cpp
+	)
+elseif("${U_EXE_NAME}" STREQUAL "EMUMASTERSYSTEM")
+	add_library(vm_${EXE_NAME}
+		keyboard.cpp
+		./memory.cpp
+		system.cpp
+		mastersystem.cpp
+	)
 endif()
