--- a/source/src/vm/hc20/CMakeLists.txt
+++ b/source/src/vm/hc20/CMakeLists.txt
@@ -1,8 +1,9 @@
 cmake_minimum_required (VERSION 2.6)
 
-message("* vm/hc20")
+message("* vm/${EXE_NAME}")
 
-add_library(vm_hc20
-	memory.cpp
-	hc20.cpp
+add_library(vm_${EXE_NAME}
+	./memory.cpp
+	
+	./hc20.cpp
 )
