--- a/source/src/vm/hc80/CMakeLists.txt
+++ b/source/src/vm/hc80/CMakeLists.txt
@@ -1,9 +1,10 @@
 cmake_minimum_required (VERSION 2.6)
 
-message("* vm/hc80")
+message("* vm/${EXE_NAME}")
 
-add_library(vm_hc80
-	memory.cpp
+add_library(vm_${EXE_NAME}
+	./io.cpp
+	./memory.cpp
+	
 	hc80.cpp
-	io.cpp
 )
