--- a/source/src/vm/pasopia/CMakeLists.txt
+++ b/source/src/vm/pasopia/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required (VERSION 2.6)
 
-message("* vm/pasopia")
+message("* vm/${EXE_NAME}")
 
 set(VM_PASOPIA_LIB_SRCS
 	pasopia.cpp
@@ -15,6 +15,6 @@ set(VM_PASOPIA_LIB_SRCS
 	rampac2.cpp
 )
 
-add_library(vm_pasopia
+add_library(vm_${EXE_NAME}
 	${VM_PASOPIA_LIB_SRCS}
 )
