--- a/source/src/qt/machines/gamegear/CMakeLists.txt
+++ b/source/src/qt/machines/gamegear/CMakeLists.txt
@@ -1,18 +1,11 @@
-message("* qt/gamegear")
+message("* qt/${EXE_NAME}")
 
 set(s_qt_gamegear_headers
 	  menuclasses.h
-	  )
-
-if(USE_QT_5)
-  QT5_WRAP_CPP(s_qt_gamegear_headers_MOC ${s_qt_gamegear_headers})
-else()
-  QT4_WRAP_CPP(s_qt_gamegear_headers_MOC ${s_qt_gamegear_headers})
-endif()
-  
-add_library(qt_gamegear
-	  MainWindow.cpp
-	  ${s_qt_gamegear_headers_MOC}
 )
 
-
+QT5_WRAP_CPP(s_qt_${EXE_NAME}_headers_MOC ${s_qt_gamegear_headers})
+add_library(qt_${EXE_NAME}
+	  MainWindow.cpp
+	  ${s_qt_${EXE_NAME}_headers_MOC}
+)
