--- a/source/src/qt/machines/hc80/CMakeLists.txt
+++ b/source/src/qt/machines/hc80/CMakeLists.txt
@@ -1,18 +1,11 @@
-message("* qt/hc80")
+message("* qt/${EXE_NAME}")
 
 set(s_qt_hc80_headers
 	  menuclasses.h
 )
 
-if(USE_QT_5)
-  QT5_WRAP_CPP(s_qt_hc80_headers_MOC ${s_qt_hc80_headers})
-else()
-  QT4_WRAP_CPP(s_qt_hc80_headers_MOC ${s_qt_hc80_headers})
-endif()
-
-add_library(qt_hc80
+QT5_WRAP_CPP(s_qt_${EXE_NAME}_headers_MOC ${s_qt_hc80_headers})
+add_library(qt_${EXE_NAME}
 	  MainWindow.cpp
-	  ${s_qt_hc80_headers_MOC}
+	  ${s_qt_${EXE_NAME}_headers_MOC}
 )
-
-
