--- a/source/src/qt/machines/pasopia/CMakeLists.txt
+++ b/source/src/qt/machines/pasopia/CMakeLists.txt
@@ -1,18 +1,13 @@
-message("* qt/pasopia")
+message("* qt/${EXE_NAME}")
 
 set(s_qt_pasopia_headers
 	  menuclasses.h
 )
 
-if(USE_QT_5)
-  QT5_WRAP_CPP(s_qt_pasopia_headers_MOC ${s_qt_pasopia_headers})
-else()
-  QT4_WRAP_CPP(s_qt_pasopia_headers_MOC ${s_qt_pasopia_headers})
-endif()
-
-add_library(qt_pasopia
+QT5_WRAP_CPP(s_qt_${EXE_NAME}_headers_MOC ${s_qt_pasopia_headers})
+add_library(qt_${EXE_NAME}
 	  MainWindow.cpp
-	  ${s_qt_pasopia_headers_MOC}
+	  ${s_qt_${EXE_NAME}_headers_MOC}
 )
 
 
