--- a/source/src/qt/machines/qc10/CMakeLists.txt
+++ b/source/src/qt/machines/qc10/CMakeLists.txt
@@ -1,18 +1,11 @@
-message("* qt/qc10")
+message("* qt/${EXE_NAME}")
 
 set(s_qt_qc10_headers
 	  menuclasses.h
 )
 
-if(USE_QT_5)
-  QT5_WRAP_CPP(s_qt_qc10_headers_MOC ${s_qt_qc10_headers})
-else()
-  QT4_WRAP_CPP(s_qt_qc10_headers_MOC ${s_qt_qc10_headers})
-endif()
-
-add_library(qt_qc10
+QT5_WRAP_CPP(s_qt_${EXE_NAME}_headers_MOC ${s_qt_qc10_headers})
+add_library(qt_${EXE_NAME}
 	  MainWindow.cpp
-	  ${s_qt_qc10_headers_MOC}
+	  ${s_qt_${EXE_NAME}_headers_MOC}
 )
-
-
